WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212089
Put PtrTagLookup data structures in Configs for freezing.
https://bugs.webkit.org/show_bug.cgi?id=212089
Summary
Put PtrTagLookup data structures in Configs for freezing.
Mark Lam
Reported
2020-05-19 10:21:43 PDT
PtrTagLookup data structures were always meant to be only initialized once at initialization time and never modified thereafter. Will put them in the Configs for freezing to document and enforce this invariant.
Attachments
proposed patch.
(6.63 KB, patch)
2020-05-19 10:30 PDT
,
Mark Lam
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-05-19 10:22:15 PDT
<
rdar://problem/63401487
>
Mark Lam
Comment 2
2020-05-19 10:30:41 PDT
Created
attachment 399748
[details]
proposed patch.
Robin Morisset
Comment 3
2020-05-19 11:16:05 PDT
Comment on
attachment 399748
[details]
proposed patch. r=me
Mark Lam
Comment 4
2020-05-19 11:29:34 PDT
Comment on
attachment 399748
[details]
proposed patch. Thanks for the review. Landing now.
EWS
Comment 5
2020-05-19 11:49:10 PDT
Committed
r261877
: <
https://trac.webkit.org/changeset/261877
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 399748
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug