Put PtrTagLookup data structures in Configs for freezing. https://bugs.webkit.org/show_bug.cgi?id=212089 <rdar://problem/63401487>

Reviewed by Robin Morisset.

Source/JavaScriptCore:

PtrTagLookup data structures were always meant to only be initialized once at
initialization time and never modified thereafter.  This patch puts them in the
Configs for freezing to document and enforce this invariant.

* runtime/JSCConfig.h:
* runtime/JSCPtrTag.cpp:
(JSC::initializePtrTagLookup):

Source/WTF:

* wtf/PtrTag.cpp:
(WTF::tagForPtr):
(WTF::ptrTagName):
(WTF::registerPtrTagLookup):
* wtf/PtrTag.h:
(WTF::PtrTagLookup::initialize):
* wtf/WTFConfig.h:


Canonical link: https://commits.webkit.org/224965@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261877 268f45cc-cd09-0410-ab3c-d52691b4dbfc